--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -541,8 +541,8 @@
     }
   },
   "carousel": {
-  "title":"Integración",  
-  "description": "Integración rápida y sin complicaciones"
+  "title":"Testimonios",  
+  "description": "Lo que dicen los líderes de la industria sobre ChatBet"
 },
 
   "footer": {
