--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -544,7 +544,7 @@
   },
   "carousel": {
   "title":"Testimonials",  
-  "description": "What industry leaders say about ChatBet"
+  "description": " What Operators Say about ChatBet"
 },
 
   "footer": {
