--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -150,7 +150,7 @@
           "cta": "Get a Free Demo"
         },
         "comparisonTable": {
-          "title": "Check Why We are the Best!",
+          "title": "Check Why We Are The Best!",
           "titleheader":"Comparison Table",
           "headers": [
             "Feature",
@@ -544,7 +544,7 @@
   },
   "carousel": {
   "title":"Testimonials",  
-  "description": " What Operators Say about ChatBet"
+  "description": " What Operators Say About ChatBet"
 },
 
   "footer": {
