--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -271,7 +271,7 @@
           "cta": "Join The Winning Operators"
         },
         "security": {
-          "title": "Top-Level Protection for Operators & Players",
+          "title": "Top-Level Protection For Operators & Players",
           "titleheader":"Security",
           "description": "ChatBet is built on enterprise-grade infrastructure, ensuring maximum player and operator protection.",
           "items": [
