--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -342,7 +342,7 @@
         },
         "calender":{
         "pick": "Pick a time that works for you.",
-        "notReady": "Not ready to book just yet? Send us a message and we'll get back to you"
+        "notReady": "Not ready to book just yet? Send us a message and we'll get back to you."
         },
         "contactUs": {
           "title": "Join the Future of AI-Powered Betting with ChatBet!",
