--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -342,21 +342,21 @@
         },
         "calender":{
         "pick": "Pick a time that works for you.",
-        "notReady": "Not ready to book just yet? Send us a message and we'll get back to you."
+        "notReady": "Early Access to AI Chat Betting – Let’s Build the Future Together"
         },
         "contactUs": {
           "title": "Join the Future of AI-Powered Betting with ChatBet!",
           "titleheader":"Contact Us",
           "subtitle": "Experience the thrill! Schedule a demo today and see how ChatBet's AI revolutionizes the user experience.",
           "form": {
-            "name": "Full Name*",
-            "monthlyGgr": "Monthly GGR (Gross Gaming Revenue)*",
-            "contactNumber": "Contact Number*",
-            "email": "Corporate Email*",
-            "company": "Company Name*",
-            "message": "Any additional comments?",
+            "name": "Full Name (Required)",
+            "monthlyGgr": "Monthly GGR (Gross Gaming Revenue)?",
+            "contactNumber": "Contact Number",
+            "email": "Corporate Email (Generic emails like @gmail.com or @hotmail.com should not be accepted)",
+            "company": "Company Name (Required)",
+            "message": "Any additional comments? (Optional)",
             "select": "Select",
-            "thanksmessage": "Thanks for reaching out. We're building something powerful, and working with a curated list of partners. If your profile aligns with our current priorities, someone from our team will be in touch shortly.",
+            "thanksmessage": "Thanks for reaching out. We're building something powerful, and working with a curated list of partners. If your profile aligns with our current priorities, someone from our team will be in touch shortly.",
             "submit": "Send Info"
           }
         },
