modificacion de prueba

--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -356,7 +356,7 @@
       "company": "Nombre de Empresa",
       "message": "¿Comentarios Adicionales?",
       "select": "Selecciona",
-      "thanksmessage": "Gracias por contactarnos. Estamos construyendo algo poderoso y trabajamos con una lista curada de socios. Si tu perfil se alinea con nuestras prioridades actuales, alguien de nuestro equipo se pondrà en contacto contigo pronto.",
+      "thanksmessage": "Gracias por contactarnos. Estamos construyendo algo poderoso y trabajamos con una lista curada de socios. Si tu perfil se alinea con nuestras prioridades actuales, alguien de nuestro equipo se pondrá en contacto contigo pronto.",
 
       "submit": "Enviar info"
     }
