--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -349,12 +349,12 @@
     "titleheader": "Contáctanos",
     "subtitle": "¡Experimenta la emoción! Agenda una demo hoy y descubre cómo la IA de ChatBet revoluciona la experiencia del usuario.",
     "form": {
-      "name": "Nombre Completo",
-      "monthlyGgr": "Ingresos Brutos Mensuales por Apuestas (GGR)?",
+      "name": "Nombre completo (requerido)",
+      "monthlyGgr": "¿Ingresos brutos mensuales por apuestas (GGR)?",
       "contactNumber": "Número de Contacto",
-      "email": "Correo Corporativo",
-      "company": "Nombre de Empresa",
-      "message": "¿Comentarios Adicionales?",
+      "email": "Correo corporativo (algunos correos genéricos como gmail.com o hotmail.com no serán aceptados)",
+      "company": "Nombre de la compañia (requerido)",
+      "message": "¿Algún comentario adicional? (Opcional)",
       "select": "Selecciona",
       "thanksmessage": "Gracias por contactarnos. Estamos construyendo algo poderoso y trabajamos con una lista curada de socios. Si tu perfil se alinea con nuestras prioridades actuales, alguien de nuestro equipo se pondrá en contacto contigo pronto.",
 
