--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -357,7 +357,7 @@
       "message": "¿Algún comentario adicional? (Opcional)",
       "select": "Selecciona",
       "thanksmessage": "Gracias por contactarnos. Estamos construyendo algo poderoso y trabajamos con una lista curada de socios. Si tu perfil se alinea con nuestras prioridades actuales, alguien de nuestro equipo se pondrá en contacto contigo pronto.",
-
+      "error": "Unicamente se permiten correos corporativos",
       "submit": "Enviar info"
     }
   },
