--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -349,11 +349,11 @@
     "titleheader": "Contáctanos",
     "subtitle": "¡Experimenta la emoción! Agenda una demo hoy y descubre cómo la IA de ChatBet revoluciona la experiencia del usuario.",
     "form": {
-      "name": "Nombre completo (requerido)",
+      "name": "Nombre completo (*)",
       "monthlyGgr": "¿Ingresos brutos mensuales por apuestas (GGR)?",
       "contactNumber": "Número de Contacto",
       "email": "Correo corporativo (algunos correos genéricos como gmail.com o hotmail.com no serán aceptados)",
-      "company": "Nombre de la compañia (requerido)",
+      "company": "Nombre de la compañia (*)",
       "message": "¿Algún comentario adicional? (Opcional)",
       "select": "Selecciona",
       "thanksmessage": "Gracias por contactarnos. Estamos construyendo algo poderoso y trabajamos con una lista curada de socios. Si tu perfil se alinea con nuestras prioridades actuales, alguien de nuestro equipo se pondrá en contacto contigo pronto.",
@@ -540,7 +540,16 @@
       {
         "image": "../../../../assets/notice/notice2.png",
         "title": "¡ChatBet finalista en el Startup Pitch de ICE 2025!",
-        "date": "22-ene-2025",
+        "details": [
+          {
+            "label": "Fecha del evento:",
+            "text": "22 de enero, 2025"
+          },
+          {
+            "label": "Ubicación:",
+            "text": "Barcelona, España"
+          }
+        ],
         "content": [
           "La emoción continúa: ¡ChatBet llegó oficialmente a la final del Startup Pitch de ICE 2025 en Barcelona! De entre innumerables aplicantes, nuestra solución de apuestas con IA se destacó como una de las innovaciones más disruptivas en la industria del gaming.",
           "Este reconocimiento refuerza nuestra visión: las apuestas por chat son el futuro. Nos sentimos honrados de presentar nuestro proyecto frente a los principales inversionistas, operadores y expertos de la industria que reconocen el impacto de nuestra tecnología."
