--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -350,9 +350,9 @@
     "subtitle": "¡Experimenta la emoción! Agenda una demo hoy y descubre cómo la IA de ChatBet revoluciona la experiencia del usuario.",
     "form": {
       "name": "Nombre completo (*)",
-      "monthlyGgr": "¿Ingresos brutos mensuales por apuestas (GGR)?",
+      "monthlyGgr": "¿Ingresos brutos mensuales por apuestas (USD)?",
       "contactNumber": "Número de Contacto",
-      "email": "Correo corporativo (algunos correos genéricos como gmail.com o hotmail.com no serán aceptados)",
+      "email": "algunos correos genéricos como gmail.com o hotmail.com no serán aceptados(*)",
       "company": "Nombre de la compañia (*)",
       "message": "¿Algún comentario adicional? (Opcional)",
       "select": "Selecciona",
