--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -348,6 +348,7 @@
     "title": "¡Únete al futuro de las apuestas con IA de ChatBet!",
     "titleheader": "Contáctanos",
     "subtitle": "¡Experimenta la emoción! Agenda una demo hoy y descubre cómo la IA de ChatBet revoluciona la experiencia del usuario.",
+    "leyenda":"(*) Campos obligatorios",
     "form": {
       "name": "Nombre completo (*)",
       "monthlyGgr": "¿Ingresos brutos mensuales por apuestas (USD)?",
