--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,4 +1,24 @@
 {
+      "GGR_LESS_250K": "<$250K",
+      "GGR_250K_1M": ">$250K – <$1M",
+      "GGR_1M_5M": ">$1M – $5M",   
+      "GGR_5M_10M": "$5M – $10M", 
+      "GGR_MORE_10M": "$10M+",
+      
+      "REGION_AFRICA": "Africa",
+      "REGION_ASIA": "Asia",
+      "REGION_EUROPE": "Europe",
+      "REGION_LATAM": "Latam",
+      "REGION_NORTH_AMERICA": "North America",
+      "REGION_OTHER": "Other",
+      
+      "INTEREST_OPERATOR": "I’m an operator interested in using ChatBet",
+      "INTEREST_PLATFORM": "I’m a platform provider interested in integrating ChatBet",
+      "INTEREST_SELL": "I’d like to help sell or distribute ChatBet",
+      "INTEREST_VENDOR": "I’m a vendor or partner offering a service",
+      "INTEREST_JOB": "I’d like to apply for a job or internship",
+      "INTEREST_OTHER": "Other (please specify below)",
+
         "header": {
           "logoAlt": "ChatBet Logo",
           "languageSwitch": {
@@ -359,7 +379,7 @@
               "select": "Select one option",
               "error": "Please enter a valid email",
               "thanksmessage": "Thank you for contacting us!",
-              "interestLabel": "I’m an operator interested in using ChatBet",
+              "interestLabel": "I’m an Operator Interested in Using ChatBet",
               "specify": "Please specify here",
               "regionLabel": "Region of Operation"
             }
