--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -370,10 +370,10 @@
           "subtitle": "Experience the thrill! Schedule a demo today and see how ChatBet's AI revolutionizes the user experience.",
           "leyenda":"(*) Required fields",
           "form": {
-              "name": "Full Name",
-              "email": "Email Address",
-              "company": "Company",
-              "monthlyGgr": "Monthly GGR",
+              "name": "Full Name (*)",
+              "email": "Email Address (*)",
+              "company": "Company (*)",
+              "monthlyGgr": "Monthly GGR USD",
               "message": "Message",
               "submit": "Send Message",
               "select": "Select one option",
